--- a/blocks/_about.scss
+++ b/blocks/_about.scss
@@ -1,8 +1,5 @@
 @use "../ulits/mixin";
 
-.about {
-  
-}
 
 .about__wrapper {
   @include mixin.mobile-wrapper
@@ -10,14 +7,14 @@
 
 .about__title {
   @include mixin.title;
-  font-size: 25px;
+  font-size: 2.5rem;
   margin-top: 60px;
 }
 
 .about__text {
   @include mixin.text;
   color: var(--gray-paragraph, #6C6C72);
-  font-size: 16px;
+  
   text-align: center;
   margin-top: 18px;
 }
