--- a/blocks/_how-to-use.scss
+++ b/blocks/_how-to-use.scss
@@ -15,7 +15,7 @@
 
 .how-to-use__title {
   @include mixin.title;
-  font-size: 25px;
+  font-size: 2.5rem;
   color: #fff;
   margin-bottom: 40px
 }
