--- a/blocks/_news.scss
+++ b/blocks/_news.scss
@@ -7,7 +7,7 @@
 
 .news__title {
   @include mixin.title;
-  font-size: 25px;
+  font-size: 2.5rem;
   color: #fff;
   text-align: left;
   margin-bottom: 11px;
