--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,8 @@
 @use "./ulits/visually-hidden";
 @use "./blocks/main";
 @use "./blocks/header";
+@use "./blocks/burger";
+@use "./blocks/logo";
 @use "./blocks/info";
 @use "./blocks/about";
 @use "./blocks/advantages";
