--- a/blocks/_advantages.scss
+++ b/blocks/_advantages.scss
@@ -18,14 +18,14 @@
 
 .advantages__title {
   @include mixin.title;
-  font-size: 20px;
+  font-size: 20rem;
   margin-bottom: 3px;
   text-align: left;
 }
 
 .advantages__text {
   @include mixin.text;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .advantages__img{
