--- a/blocks/_articles.scss
+++ b/blocks/_articles.scss
@@ -19,7 +19,7 @@
 
 .articles__title {
   @include mixin.title;
-  font-size: 20px;
+  font-size: 20rem;
   text-align: left;
   margin-top: 30px;
   margin-bottom: 18px;
@@ -35,7 +35,7 @@
 .articles__link {
   color: var(--Royal-blue, #5956E9);
   font-family: Josefin Sans;
-  font-size: 20px;
+  font-size: 20rem;
   font-style: normal;
   font-weight: 600;
   line-height: 130%;
