--- a/blocks/_features.scss
+++ b/blocks/_features.scss
@@ -16,12 +16,12 @@
 .features__title {
   @include mixin.title;
   color: #fff;
-  font-size: 20px;
+  font-size: 20rem;
   margin-bottom: 18px;
 }
 
 .features__title--big{
-  font-size: 25px;
+  font-size: 2.5rem;
 }
 
 .features__text {
