--- a/blocks/_info.scss
+++ b/blocks/_info.scss
@@ -42,13 +42,13 @@
 .info__title {
   @include mixin.title;
   color: var(--Royal-blue, #5956E9);
-  font-size: 25px;
+  font-size: 2.5rem;
   margin-bottom: 18px;
 }
 
 .info__text {
   @include mixin.text;
-  font-size: 16px;
+  font-size: 1.6rem;
   color: var(--gray-paragraph, #6C6C72);
   margin-bottom: 30px;
   text-align: left;
@@ -57,7 +57,7 @@
 .info__subtitle {
   @include mixin.title;
   color: var(--Black, #232233);
-  font-size: 20px;
+  font-size: 20rem;
   margin-bottom: 18px;
 }
 
