--- a/ulits/_general.scss
+++ b/ulits/_general.scss
@@ -4,3 +4,15 @@
   box-sizing: border-box;
 }
 
+body{
+    font-family: 'Josefin Sans',
+        sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-weight: 400;
+      line-height: 1.5;
+      font-style: normal;
+      font-size: 16px;
+}
+
+html{
+  font-size: 62.5%;
+}
