--- a/ulits/_mixin.scss
+++ b/ulits/_mixin.scss
@@ -13,7 +13,7 @@
   font-weight: 400;
   line-height: 1.5;
   font-style: normal;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 @mixin desktop-wrapper{
