--- a/blocks/_header.scss
+++ b/blocks/_header.scss
@@ -3,22 +3,20 @@
 .header {
   background-color: #5956E9;
   padding-top: 47px;
-  padding-bottom: 20px
-
-  
-
-  
+  padding-bottom: 20px;
 }
 
 .header__wrapper {
-  @include mixin.mobile-wrapper;
+  max-width: 343px;
+  width: 100%;
+  margin: 0 auto;
   background-color: #FFF;
   height: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 3px;
-  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
   position: relative;
 }
 
@@ -27,7 +25,6 @@
   font-size: 10px;
   font-weight: 600;
   line-height: normal;
-
   padding: 12px 6px;
   display: block;
   border-radius: 3px;
@@ -35,15 +32,12 @@
   margin-right: 3px;
 }
 
-.header__logo{
+.header__logo {
   border-radius: 5px;
-    background: var(--White, #FFF);
-    /* Effect-1 */
-    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.10);
-        position: absolute;
-          left: 50%;
-          transform: translateX(-50%);
+  background: var(--White, #FFF);
+  /* Effect-1 */
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
-
-
-
