--- a/blocks/_slider.scss
+++ b/blocks/_slider.scss
@@ -16,7 +16,7 @@
   min-width: 343px;
   width: 343px;
   border-radius: 10px;
-  background: var(--White, #FFF);
+  background: #FFF;
   /* Effect-2 */
   box-shadow: 0px 10px 100px 0px rgba(0, 0, 0, 0.24);
   padding: 20px 14px;
@@ -24,7 +24,7 @@
 
 .slider__item {
   position: relative;
-  transform: scale(2, 0.86);
+  transform: scale(1, 0.86);
 }
 
 .slider__item_active{
