--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,7 @@ html {
   margin: 0 auto;
   position: relative;
 }
+
 .info__box::after {
   content: "";
   position: absolute;
@@ -402,6 +403,8 @@ html {
   max-width: 343px;
   width: 100%;
   margin: 0 auto;
+  padding-top: 60px;
+  padding-bottom: 70px;
 }
 
 .about__title {
@@ -411,7 +414,6 @@ html {
   line-height: 1.5;
   text-align: center;
   font-size: 2.5rem;
-  margin-top: 60px;
 }
 
 .about__text {
@@ -431,7 +433,7 @@ html {
 }
 
 .advantages {
-  margin-top: 75px;
+  padding-top: 75px;
 }
 
 .advantages__item {
@@ -663,12 +665,12 @@ html {
   background: url(../img/review__bg.jpg), lightgray 50%/cover no-repeat;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-bottom: 62px;
-  padding-top: 60px;
 }
 
 .rewiev__wrapper {
   /*       @include mixin.mobile-wrapper; */
+  padding-bottom: 62px;
+  padding-top: 60px;
 }
 
 .rewiev__title {
@@ -705,7 +707,7 @@ html {
   min-width: 343px;
   width: 343px;
   border-radius: 10px;
-  background: var(--White, #FFF);
+  background: #FFF;
   /* Effect-2 */
   box-shadow: 0px 10px 100px 0px rgba(0, 0, 0, 0.24);
   padding: 20px 14px;
@@ -713,7 +715,7 @@ html {
 
 .slider__item {
   position: relative;
-  transform: scale(2, 0.86);
+  transform: scale(1, 0.86);
 }
 
 .slider__item_active {
@@ -779,14 +781,12 @@ html {
   display: block;
 }
 
-.blog {
-  margin-top: 60px;
-}
-
 .blog__wrapper {
   max-width: 343px;
   width: 100%;
   margin: 0 auto;
+  padding-top: 60px;
+  padding-bottom: 1px;
 }
 
 .blog__title {
@@ -844,7 +844,8 @@ html {
   font-style: normal;
   font-size: 1.6rem;
   margin-bottom: 20px;
-  margin-left: 18px;
+  padding-left: 18px;
+  padding-right: 8px;
 }
 
 .articles__link {
@@ -911,8 +912,6 @@ html {
 
 .footer {
   background: var(--Black, #232233);
-  padding-top: 220px;
-  padding-bottom: 30px;
   margin-top: -160px;
 }
 
@@ -920,6 +919,8 @@ html {
   max-width: 343px;
   width: 100%;
   margin: 0 auto;
+  padding-top: 220px;
+  padding-bottom: 30px;
 }
 
 .social__title {
