--- a/blocks/_advantages.scss
+++ b/blocks/_advantages.scss
@@ -5,14 +5,15 @@
 }
 
 .advantages__item {
-  width: 343px;
+  width: 100%;
   border-radius: 10px;
     background: var(--White, #FFF);
     padding: 18px 16px 10px 61px;
   
     /* Effect-1 */
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.10);
-    margin-bottom: 20px;
+
+    margin: 0 auto 20px auto;
     position: relative;
 }
 
