--- a/blocks/_articles.scss
+++ b/blocks/_articles.scss
@@ -9,7 +9,7 @@
   /* Effect-1 */
   box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.10);
   padding-bottom: 30px;
-  margin-bottom: 40px;
+  margin: 0 auto 40px auto;
 }
 
 .articles__img {
