--- a/blocks/_contacts.scss
+++ b/blocks/_contacts.scss
@@ -1,13 +1,14 @@
 @use "../ulits/mixin";
 
 .contacts {
-  padding-bottom: 30px;
-  padding-top: 30px;
-  @include mixin.mobile-wrapper;
+  max-width: 750px;
+  width: 87%;
+  margin: 0 auto;
+  padding: 20px 16px;
   border-radius: 10px;
-    background: var(--White, #FFF);
-    filter: drop-shadow(0px 10px 100px rgba(0, 0, 0, 0.24));
-    position: relative;
+  background: #FFF;
+  filter: drop-shadow(0px 10px 100px rgba(0, 0, 0, 0.24));
+  position: relative;
 
   &::after {
     content: '';
@@ -34,7 +35,7 @@
   margin-bottom: 50px;
 }
 
-.contacts__link:nth-child(3){
+.contacts__link:nth-child(3) {
   margin-bottom: 0;
 }
 
