--- a/blocks/_how-to-use.scss
+++ b/blocks/_how-to-use.scss
@@ -6,11 +6,11 @@
 }
 
 .how-to-use__wrapper {
-    @include mixin.mobile-wrapper;
-    padding-top: 60px;
-    padding-bottom: 116px;
-    margin-bottom: 134px;
-    position: relative;
+  @include mixin.mobile-wrapper;
+  padding-top: 60px;
+  padding-bottom: 116px;
+  margin-bottom: 134px;
+  position: relative;
 }
 
 .how-to-use__title {
@@ -29,9 +29,9 @@
 .how-to-use__video {
   position: absolute;
   bottom: 0;
-  left: 0;
-  transform: translateY(50%);
+  left: 50%;
+  transform: translate(-50%, 50%);
   border-radius: 10px;
-    /* Effect-2 */
-    box-shadow: 0px 10px 100px 0px rgba(0, 0, 0, 0.24);
+  /* Effect-2 */
+  box-shadow: 0px 10px 100px 0px rgba(0, 0, 0, 0.24);
 }
