--- a/blocks/_info.scss
+++ b/blocks/_info.scss
@@ -6,6 +6,7 @@
   background: url("../img/info__bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 .info__wrapper {
@@ -43,7 +44,6 @@
   font-weight: 600;
   text-transform: uppercase;
   line-height: 1.5;
-  text-align: center;
   color: var(--Royal-blue, #5956E9);
   font-size: 2.5rem;
   margin-bottom: 18px;
@@ -66,7 +66,6 @@
   font-weight: 600;
   text-transform: uppercase;
   line-height: 1.5;
-  text-align: center;
   color: var(--Black, #232233);
   font-size: 2rem;
   margin-bottom: 18px;
@@ -74,6 +73,7 @@
 
 .info__example {
   margin-top: 60px;
+  padding-left: 45px;
   display: block;
   margin-left: auto;
 }
