--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,7 @@
 @use "./blocks/links";
 @use "./blocks/news";
 @use "./blocks/copyright";
+@use "./blocks/box";
 
 html {
   font-family: 'Josefin Sans',
